Major Renovations on Login Page
Made the login page pretty awesome.

Killed the homepage to make room for the timeline/social-media stoof.

--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -1,229 +1,3 @@
-/*.breadcrumb {
-    width:100%;
-    margin-bottom: 0px;
-    list-style: none;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-radius: 4px;
-    padding-top: 0;
-    padding-bottom: 0;
-}*/
-
-.header-content {
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-  background-color: rgba(0,0,0,.6);
+#home  {
+  padding-top:70px;
 }
-#team {
-  width:80%;
-  margin:auto;
-}
-
-.text-primary {
-  color:rgb(149, 107, 185);
-}
-div.new_html_code {
-    overflow:hidden;
-    /*display:block;*/
-    border:1px solid #282828;
-    margin:auto;
-    /*max-height:450px;*/
-}
-.staff-name {
-  text-align:center;
-}
-.modal-content {
-    background-color: rgba(29, 29, 29, 0.84);
-}
-img#galleryImage.img-responsive.staff-modal{
-  margin:auto;
-  border-radius:7px;
-}
-.gallery-box {
-    height:170px;
-    width:auto;
-    margin-bottom:15px;
-}
-.gallery-box img {
-   height:170px;
-   width:auto;
-   margin:auto;
-   border-radius:7px;
-}
-
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
-
-#social {
-  margin: 20px 10px;
-  text-align: center;
-}
-
-.smGlobalBtn {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #2d2d2d;
-    box-shadow: 0 1px 15px #956bb9;
-    padding: 0px;
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    font-size: 25px;
-    font-weight: normal;
-    line-height: 2em;
-    border-radius: 27px;
-    -moz-border-radius: 27px;
-    -webkit-border-radius: 27px;
-}
-
-
-
-/* facebook button class*/
-.facebookBtn{
-    background: #4060A5;
-}
-
-.facebookBtn:before{ /* use :before to add the relevant icons */
-    font-family: "FontAwesome";
-    content: "\f09a"; /* add facebook icon */
-}
-
-.facebookBtn:hover{
-    color: #4060A5;
-    background: rgba(0, 0, 0, 0);
-    border-color: #4060A5; /* change the border color on mouse hover */
-}
-
-/* twitter button class*/
-.twitterBtn{
-    background: #00ABE3;
-}
-
-.twitterBtn:before{
-      font-family: "FontAwesome";
-      content: "\f099"; /* add twitter icon */
-      
-}
-
-.twitterBtn:hover{
-      color: #00ABE3;
-      background: rgba(0, 0, 0, 0);
-      border-color: #00ABE3;
-}
-/* facebook button class*/
-.facebookBtn-home{
-    background: #2d2d2d;
-    color:#956bb9;
-}
-
-.facebookBtn-home:before{ /* use :before to add the relevant icons */
-    font-family: "FontAwesome";
-    content: "\f09a"; /* add facebook icon */
-}
-
-.facebookBtn-home:hover{
-    color: #2d2d2d;
-    background: #956bb9;
-    border-color: #956bb9; /* change the border color on mouse hover */
-}
-
-/* twitter button class*/
-.twitterBtn-home{
-    background: #2d2d2d;
-    color:#956bb9;
-}
-
-.twitterBtn-home:before{
-      font-family: "FontAwesome";
-      content: "\f099"; /* add twitter icon */
-      
-}
-
-.twitterBtn-home:hover{
-      color: #2d2d2d;
-      background: #956bb9;
-      border-color: #956bb9;
-}
-
-/* google plus button class*/
-.googleplusBtn{
-    background: #e64522;
-}
-
-.googleplusBtn:before{
-      font-family: "FontAwesome";
-      content: "\f0d5"; /* add googleplus icon */
-}
-
-.googleplusBtn:hover{
-      color: #e64522;
-      background: rgba(0, 0, 0, 0);
-      border-color: #e64522;
-}
-
-/* linkedin button class*/
-.linkedinBtn{
-    background: #0094BC;
-}
-
-.linkedinBtn:before{
-      font-family: "FontAwesome";
-      content: "\f0e1"; /* add linkedin icon */
-}
-
-.linkedinBtn:hover{
-      color: #0094BC;
-      background: rgba(0, 0, 0, 0);
-      border-color: #0094BC;
-}
-
-/* pinterest button class*/
-.pinterestBtn{
-    background: #cb2027;
-}
-
-.pinterestBtn:before{
-      font-family: "FontAwesome";
-      content: "\f0d2"; /* add pinterest icon */
-}
-
-.pinterestBtn:hover{
-      color: #cb2027;
-      background: rgba(0, 0, 0, 0);
-      border-color: #cb2027;
-}
-
-/* tumblr button class*/
-.tumblrBtn{
-    background: #3a5876;
-}
-
-.tumblrBtn:before{
-      font-family: "FontAwesome";
-      content: "\f173"; /* add tumblr icon */
-}
-
-.tumblrBtn:hover{
-      color: #3a5876;
-      background: rgba(0, 0, 0, 0);
-      border-color: #3a5876;
-}
-
-/* rss button class*/
-.rssBtn{
-    background: #e88845;
-}
-
-.rssBtn:before{
-      font-family: "FontAwesome";
-      content: "\f09e"; /* add rss icon */
-}
-
-.rssBtn:hover{
-      color: #e88845;
-      background: rgba(0, 0, 0, 0);
-      border-color: #e88845;
-}
-
