--- a/src/global.css
+++ b/src/global.css
@@ -50,7 +50,7 @@ hr.light {
 }
 
 a {
-    color: #9c27b0;
+    color: #956bb9;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
