--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -42,13 +42,13 @@
 <section id="feature-head" style="background-color:#050706;">
 	<div class="container-fluid">
 		<div class="row features">
-			<div class="row" style="text-align:right;">
+			<div class="row">
         		<div class="media wow fadeIn">
                     <div class="media-body media-middle text-center">
-		            	<p>We can promote something here</p>
+		            	<h2 class="text-primary">We can promote something here</h2>
 		            </div>
 		        </div>
-            </div>
+            </div><br>
             <div class="row"  style="text-align:center;">
             	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
             	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
@@ -64,11 +64,11 @@
 <!-- All images must be scaled properly -->
 <section id="content" class="parallax-section">
     <div class="container-fluid" style="padding:50px;">
-        <div class="row features">
+        <div class="row features" style="margin:auto;">
            <!--  <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             	<img src="http://placehold.it/500x200" alt="">
             </div> -->
-            <div class="col-lg-12 col-sm-12 col-xs-12">
+            <div class="col-lg-7">
             	<div class="media wow fadeIn">
                     <div class="media-body media-right text-center para-text">
 		            	<h2>Get all the AQ3D info you'll need!</h2>
@@ -85,16 +85,16 @@
        		<div class="hidden-lg col-md-12 col-sm-12 col-xs-12"  style="text-align:center;">
             	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%;">
             </div>
-        	<div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 col-lg-5 col-md-5 col-sm-5 col-xs-5" style="text-align:center;">
+        	<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2 col-lg-5 col-md-5 col-sm-5 col-xs-5">
         		<div class="media wow fadeIn">
-                    <div class="media-body media-middle text-center">
+                    <div class="media-body media-middle" style="text-align:right;">
 		            	<h2>Stay Connected</h2>
 		            	<p>Keep in touch with other players with the social features AQConnect has to offer! Currently we have forums, however in the near future we will be creating a social-media type of feature in-site where users will have timelines and friends list, etc... Similar to a Facebook or Twitter type of media.</p>
 		            </div>
 		        </div>
             </div>
             <div class="col-lg-2 hidden-md hidden-sm hidden-xs"  style="text-align:center;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%;">
+            	<img src="http://aqconnect.io/social.png" alt="" style=" height:250px; width:auto; border-radius:50%; ">
             </div>
         </div>
 	</div>
@@ -105,7 +105,7 @@
         	<!-- <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" >
             	<img src="http://placehold.it/400x200" alt="">
             </div> -->
-        	<div class="col-lg-12 col-sm-12 col-xs-12">
+        	<div class="col-lg-7">
         		<div class="media wow fadeIn">
                     <div class="media-body media-middle text-center para-text">
 		            	<h2>Be in the know</h2>
