--- a/src/app/pages/content/content-details/badge/badge.html
+++ b/src/app/pages/content/content-details/badge/badge.html
@@ -2,7 +2,7 @@
 	<!-- Title -->
 	<div class="row">
 		<div class="col-lg-4" style="text-align:left;">
-			<a href="#contentModal"  data-toggle="modal">
+			<a id="toggler" href="#contentModal"  data-toggle="modal">
 				<span style="color:red; font-size:15px;"class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
 			</a>
 		</div>
