--- a/src/app/pages/forums/forum/forum.html
+++ b/src/app/pages/forums/forum/forum.html
@@ -38,14 +38,14 @@
 	</div>
 </div>
 
-
-<div id="forumPostModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="forumPostModal" class="modal fade" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
 	    <div class="modal-content">
 	        <div class="modal-body">
 	            <div class="row">
 	                <div class="col-lg-8 col-lg-offset-2 text-center">
 	                    <h2 class="margin-top-0 wow fadeIn">New Thread</h2>
+	                    <p>(Body and Title Required)</p>
 	                    <hr class="primary">
 	                </div>
 	                <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -55,14 +55,24 @@
 	                    </div>
 	                    <div class="col-md-12">
 	                        <label></label>
-	                        <textarea class="form-control" [(ngModel)]="body" rows="9" placeholder="Your message here.."></textarea>
+	                        <!-- <textarea class="form-control" [(ngModel)]="body" rows="9" placeholder="Your message here.."></textarea> -->
+	                        <ckeditor
+							    [(ngModel)]="body"
+							    [config]="{toolbarCanCollapse: true}"
+							    debounce="500">
+							  </ckeditor>
 	                    </div>
 	                    <div class="col-md-4 col-md-offset-4">
 	                        <label></label>
 	                        <button type="button" data-toggle="modal" data-target="#forumPostModal" class="btn btn-primary btn-block btn-lg" style="color:rgb(149, 107, 185); border-color:rgb(149, 107, 185);" (click)="post(title,body); title=''; body = '';">Post <i class="ion-android-arrow-forward"></i></button>
+	                        <button type="button" (click)="preview = !preview" style="color:rgb(149, 107, 185); border-color:rgb(149, 107, 185);" class="btn btn-primary btn-lg btn-block">Preview</button>
 	                    </div>
 	                </div>
 	            </div>
+				<hr style="width:100%;max-width:100%;">
+	            <div class="row">
+					<div style="padding:15px;" *ngIf="preview" class="post-body" [innerHTML]="body | safe:'html'"></div>
+				</div>
 	        </div>
 	    </div>
     </div>
