--- a/src/app/pages/news/news-detail/news-detail.html
+++ b/src/app/pages/news/news-detail/news-detail.html
@@ -1,7 +1,7 @@
 <div id="newsdetail">
 	<div class="row">
 		<div class="col-lg-4" style="text-align:left;">
-			<a href="#newsModal"  data-toggle="modal">
+			<a id="toggler" href="#newsModal"  data-toggle="modal">
 				<span style="color:red; font-size:15px;"class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
 			</a>
 		</div>
@@ -18,7 +18,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="text-center">
-				<img *ngIf="post?.images[0]?.image_url" style="height:300px; width:auto; border-radius:7px; margin-bottom:15px;" src="{{post?.images[0]?.image_url}}" alt="Post's Image">
+				<img *ngIf="post?.images[0]?.image_url" style="height:auto; max-height:300px; max-width:100%; border-radius:7px; margin-bottom:15px;" src="{{post?.images[0]?.image_url}}" alt="Post's Image">
 			</div>
 
 			<div class="post-body" [innerHTML]="post?.text | safe:'html'">
