--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -1,6 +1,6 @@
 <div id="news">
 	<div class="container-fluid">
-		<div class="col-lg-12">
+		<div class="col-lg-8 col-lg-offset-2">
 			<ul class="list-group">
 			  <div class="loader" *ngIf="!news || !news.length">Loading...</div>
 			  <li *ngFor="let post of news" class="list-group-item" data-toggle="modal" href="#newsModal" (click)="openDetail(post.ID)">
