--- a/src/app/pages/userpage/userpage.html
+++ b/src/app/pages/userpage/userpage.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-4" style="text-align:left;">
-			<a href="#userModal"  data-toggle="modal">
+			<a id="toggler" href="#userModal"  data-toggle="modal">
 				<span style="color:red; font-size:15px;"class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
 			</a>
 		</div>
